ArmTemplates/VM.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vmPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Please enter a VM Password"
      }
    }
  },
  "functions": [],
  "variables": {},
  "resources": [
    {
      "name": "demovmstore46372",
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2021-04-01",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "Standard_GRS"
      },
      "kind": "StorageV2"
    },
    {
      "name": "demoVM-PublicIP",
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-11-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "testvm578"
        }
      }
    },
    {
      "name": "demoVM-nsg",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "nsgRule1",
            "properties": {
              "description": "description",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "nsgRule2",
            "properties": {
              "description": "description",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    // Custom Script Extensions
    {
      "name": "demoVM01/customScript1",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2021-03-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', 'demoVM01')]"
      ],
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.10",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "https://demostorage21901.blob.core.windows.net/scriptcontainer/iis.ps1?sp=r&st=2022-09-28T15:14:10Z&se=2022-09-28T23:14:10Z&spr=https&sv=2021-06-08&sr=b&sig=%2B7IAYWUtLXc6hTRUFZn8lFlncq2aHI1plSaHMUfosnE%3D"
            // "https://demostorage21901.blob.core.windows.net/scriptcontainer/iis.ps1?sp=r&st=2022-09-28T14:35:12Z&se=2022-09-28T22:35:12Z&spr=https&sv=2021-06-08&sr=b&sig=77Wcs1GBqCJ0akCfjaaMGH4yzZo4ldbNOV5T2Vox7XU%3D"
          ]
        },
        "protectedSettings": {
          "commandToExecute": "powershell -ExecutionPolicy Unrestricted -file iis.ps1"
        }
      }
    },
    {
      "name": "demoVM-VirtualNetwork",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-11-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'demoVM-nsg')]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": ["10.0.0.0/16"]
        },
        "subnets": [
          {
            "name": "SubnetA",
            "properties": {
              "addressPrefix": "10.0.0.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'demoVM-nsg')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "demoVM-NetworkInterface",
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2020-11-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', 'demoVM-PublicIP')]",
        "[resourceId('Microsoft.Network/virtualNetworks', 'demoVM-VirtualNetwork')]"
      ],
      "tags": {
        "displayName": "windowsVM1 Network Interface"
      },
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipConfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', 'demoVM-PublicIP')]"
              },
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', 'demoVM-VirtualNetwork', 'SubnetA')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "demoVM01",
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', 'demovmstore46372')]",
        "[resourceId('Microsoft.Network/networkInterfaces', 'demoVM-NetworkInterface')]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "Standard_D2_v2"
        },
        "osProfile": {
          "computerName": "demoVM1",
          "adminUsername": "demovm01",
          "adminPassword": "[parameters('vmPassword')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "MicrosoftWindowsServer",
            "offer": "WindowsServer",
            "sku": "2019-Datacenter",
            "version": "latest"
          },
          "osDisk": {
            "name": "windowsVM1OSDisk",
            "caching": "ReadWrite",
            "createOption": "FromImage"
          },
          "dataDisks": [
            {
              "name": "DataDisk",
              "diskSizeGB": 16,
              "createOption": "Empty",
              "lun": 0
            }
          ]
        },

        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', 'demoVM-NetworkInterface')]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/','demovmstore46372')).primaryEndpoints.blob]"
          }
        }
      }
    }
  ]
}
